--- a/learnstudio/Dockerfile.dev
+++ b/learnstudio/Dockerfile.dev
@@ -8,7 +8,9 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # install and cache app dependencies
 COPY package.json /app/package.json
+#RUN npm install --force
 RUN npm install --force
+
 RUN npm install -g @angular/cli@12.0.4
 
 # add app
