--- a/learnstudio/angular.json
+++ b/learnstudio/angular.json
@@ -129,5 +129,8 @@
       }
     }
   },
-  "defaultProject": "learnstudio"
+  "defaultProject": "learnstudio",
+  "cli": {
+    "analytics": false
+  }
 }
