--- a/learn-studio-front/angular.json
+++ b/learn-studio-front/angular.json
@@ -79,6 +79,9 @@
               "browserTarget": "learn-studio-front:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
