--- a/learn-studio-front/nginx/nginx.conf
+++ b/learn-studio-front/nginx/nginx.conf
@@ -1,29 +1,20 @@
-server {
- listen 80;
- server_name learn-studio.local;
- location / {
-   # Fichiers statiques du Front-End
-   root /usr/share/nginx/html;
-   try_files $uri /index.html;
- }
-
-  access_log off;
-  error_log /var/log/nginx/error-front.log error;
+# Expires map
+map $sent_http_content_type $expires {
+    default                    off;
+    text/html                  epoch;
+    text/css                   max;
+    application/json           max;
+    application/javascript     max;
+    ~image/                    max;
 }
 
-
 server {
- listen 80;
- server_name learn-studio-api.local;
- location / {
-   # Ajoute les confs de proxy 
-   # Voir si y a des paramêtres qui améliorent les perfs
-   
-   #include /etc/nginx/includes/proxy.conf;
-   
-   # Le networt interne de docker s'occupe de résoudre les noms
-   proxy_pass http://node:3000;
- }
-  access_log off;
-  error_log /var/log/nginx/error-api.log error;
+  listen 80;
+  location / {
+      root /usr/share/nginx/html;
+      index index.html index.htm;
+      try_files $uri $uri/ /index.html =404;
+    }
+  expires $expires;
+  gzip  on;
 }
